# swift

./: CMakeLists.txt
benchmark/: CMakeLists.txt
cmake/caches/: swift.cmake
cmake/modules/: AddSwift.cmake  ConfigureSDKs.cmake  Modules.cmake  Platforms.cmake  Predicates.cmake  SwiftCompilerLibrary.cmake  SwiftProjects.cmake  Versions.cmake
cmake/modules-old/: SwiftHandleGybSources.cmake
cmake/projects/: CMark.cmake  CMarkConfig.cmake  Clang.cmake  ClangConfig.cmake  CompilerRT.cmake  CompilerRTConfig.cmake  Foundation.cmake  IntegrationTests.cmake  LLBuild.cmake  LLDB.cmake  LLDBConfig.cmake  LLVM.cmake  LLVMConfig.cmake  LibDispatch.cmake  LibDispatchConfig.cmake  Ninja.cmake  NinjaConfig.cmake  Swift.cmake  SwiftConfig.cmake  SwiftPM.cmake  SwiftPMConfig.cmake  SwiftStdlib.cmake  SwiftStdlibConfig.cmake  XCTest.cmake  XCodePlaygroundSupport.cmake
cmake/sdks/: Android.cmake  Cygwin.cmake  Darwin.cmake  DarwinIOS.cmake  DarwinIOSSimulator.cmake  DarwinMacOS.cmake  DarwinTVOS.cmake  DarwinTVSimulator.cmake  DarwinWatchOS.cmake  DarwinWatchSimulator.cmake  FreeBSD.cmake  HostSDK.cmake  Linux.cmake
include/swift/SwiftRemoteMirror/: CMakeLists.txt
lib/: CMakeLists.txt
lib/AST/: CMakeLists.txt
lib/ASTSectionImporter/: CMakeLists.txt
stdlib/public/SDK/QuartzCore/: CMakeLists.txt
tools/SourceKit/: CMakeLists.txt
utils/: build-script  build-script-impl  swiftenv-make  swiftenv-script  update-checkout
utils/swift_build_support/swift_build_support/: cmake.py  shell.py  toolchain.py
utils/swift_build_support/tests/: test_cmake.py
